code cleanup and translation fixes

--- a/src/main/webapp/app/components/account/profile/ProfileView.html
+++ b/src/main/webapp/app/components/account/profile/ProfileView.html
@@ -5,17 +5,12 @@
                 <h2 translate="tatami.profile.title"></h2>
                 <br>
                 <fieldset class="form-horizontal row-fluid">
-
                     <div class="control-group dashed">
                         <label class="control-label">
-
                         </label>
-
                         <div class="controls">
                             <div id="updateAvatar" class="dropzone well">
-                            
                                 <img class="nomargin avatar" ng-src="{{ profile.avatarURL }}">
-
                                 <p class="little-padding-top">Drop your photo here to update it</p>
                                 <input id="avatarFile" type="file" name="uploadFile" data-url="/tatami/rest/fileupload/avatar">
                             </div>
@@ -23,59 +18,42 @@
                                 <div class="bar progress-bar progress-bar-info" style="width: 0%;"></div>
                             </div>
                         </div>
-
                     </div>
-
-
                 </fieldset>
-
                 <fieldset class="form-horizontal row-fluid">
                     <legend translate="tatami.profile.update"></legend>
-
                     <div class="control-group">
                         <label class="control-label" for="login" translate="tatami.profile.email"></label>
-
                         <div class="controls">
                             <input name="login" type="text" disabled="true" class="col-span-12" ng-model="userLogin">
                         </div>
                     </div>
-
-
                     <div class="control-group">
                         <label class="control-label" for="firstName" translate="tatami.profile.firstName">
                         </label>
-
                         <div class="controls">
                             <input name="firstName" type="text" size="15" maxlength="40" class="input-xlarge col-span-12" ng-model="userProfile.firstName">
                         </div>
                     </div>
-
                     <div class="control-group">
                         <label class="control-label" for="lastName" translate="tatami.profile.lastName"></label>
-
                         <div class="controls">
                             <input name="lastName" type="text" id="lastName" size="15" maxlength="40" class="input-xlarge col-span-12" ng-model="userProfile.lastName">
                         </div>
                     </div>
-
                     <div class="control-group">
                         <label class="control-label" for="jobTitle" translate="tatami.profile.jobTitle"></label>
-
                         <div class="controls">
                             <input name="jobTitle" type="text" size="15" maxlength="100" class="input-xlarge col-span-12" ng-model="userProfile.jobTitle">
                         </div>
                     </div>
-
                     <div class="control-group">
                         <label class="control-label" for="phoneNumber" translate="tatami.profile.phoneNumber"></label>
-
                         <div class="controls">
                             <input name="phoneNumber" type="text" size="10" maxlength="20" class="input-xlarge col-span-12" ng-model="userProfile.phoneNumber">
                         </div>
                     </div>
-
                     <div class="return"></div>
-
                     <div class="form-actions">
                         <button type="submit" class="input-xlarge btn btn-primary btn-block" translate="tatami.form.save" ng-click="updateUser()"></button>
                     </div>
@@ -83,10 +61,10 @@
             </form>
             <form>
                 <fieldset class="form-horizontal row-fluid">
-                    <legend translate="tatami.status.delete"></legend>
+                    <legend translate="tatami.profile.delete"></legend>
                     <div class="return"></div>
                     <div class="form-actions">
-                        <button type="submit" class="input-xlarge btn btn-danger btn-block" ng-click="deleteUser('You are about to delete your account. Are you sure?')" translate="tatami.status.delete">
+                        <button type="submit" class="input-xlarge btn btn-danger btn-block" ng-click="deleteUser(('tatami.profile.confirmDelete' | translate))" translate="tatami.profile.delete">
                         </button>
                     </div>
                 </fieldset>
