changed the word geolocalization to share location

--- a/src/main/webapp/app/components/home/post/PostView.html
+++ b/src/main/webapp/app/components/home/post/PostView.html
@@ -121,7 +121,7 @@
             <div ng-show="!current.reply">
                 <label>
                     <input type="checkbox" ng-model="current.geoLoc" ng-change="updateLocation()">
-                    <span class="glyphicon glyphicon-map-marker" translate="tatami.post.geoLocalization"></span>
+                    <span class="glyphicon glyphicon-map-marker" translate="tatami.post.shareLocation"></span>
                 </label>
                 <div ng-if="current.geoLoc">
                     <!-- Was width:250px, changed it to 500 -->
