hid delete user account button for now

--- a/src/main/webapp/app/components/account/profile/ProfileView.html
+++ b/src/main/webapp/app/components/account/profile/ProfileView.html
@@ -59,6 +59,7 @@
                     </div>
                 </fieldset>
             </form>
+            <!-- Disabled for now until backend handles deleting accounts properly
             <form>
                 <fieldset class="form-horizontal row-fluid">
                     <legend translate="tatami.profile.delete"></legend>
@@ -69,6 +70,7 @@
                     </div>
                 </fieldset>
             </form>
+            -->
         </div>
     </div>
 </div>
